--- a/deployment-guides/modules/ROOT/pages/index.adoc
+++ b/deployment-guides/modules/ROOT/pages/index.adoc
@@ -1,6 +1,6 @@
-== Deployment Guides
+= Deployment Guides
 
-=== Overview
+== Overview
 
 This section contains guides implementing a stable SDP deployment on
 different platforms.
