--- a/deployment-guides/modules/openshift/nav.adoc
+++ b/deployment-guides/modules/openshift/nav.adoc
@@ -1,4 +1,4 @@
-* xref:index.adoc[Overview]
+* xref:index.adoc[OpenShift]
 ** xref:1_0_Deploy_Tools_Overview.adoc[Section 1 - Deploying the DevOps Tools]
 ** xref:1_1_Prepare_To_Install.adoc[Section 1.1 - Preparing to Run the Installer]
 ** xref:1_2_Run_Installer.adoc[Section 1.2 - Running the Installer Script]
