--- a/deployment-guides/modules/openshift/pages/3_0_Application_Environment_Overview.adoc
+++ b/deployment-guides/modules/openshift/pages/3_0_Application_Environment_Overview.adoc
@@ -1,6 +1,6 @@
-== Section 3 - Setting up the Application Environments
+= Section 3 - Setting up the Application Environments
 
-=== Section 3 Overview
+== Section 3 Overview
 
 The link:/sdp-docs/pages/libraries/openshift/README.html[OpenShift library] has a link:https://github.com/boozallen/sdp-libraries/blob/master/openshift/deploy_to.groovy[deploy step] that can be used to deploy the most recent build of a
 particular service to a given link:https://docs.openshift.com/container-platform/3.11/architecture/core_concepts/projects_and_users.html#projects[OpenShift project]. The first part of this section covers
@@ -8,9 +8,9 @@ how to create and configure the target OpenShift projects. The second
 part goes over how to create a Helm repository, defines how your
 application is deployed.
 
-=== Before You Begin
+== Before You Begin
 
-==== You Should Have...
+=== You Should Have...
 
 * A working Openshift cluster
 * Credentials for a User on that cluster that has the _cluster-admin_
@@ -26,7 +26,7 @@ https://docs.openshift.com/container-platform/3.11/cli_reference/get_started_cli
 https://docs.okd.io/3.11/cli_reference/get_started_cli.html#cli-reference-get-started-cli
 
 
-==== You Should Be Able To...
+=== You Should Be Able To...
 
 * Modify simple configuration files
 * Run bash commands/scripts
