--- a/how-to/modules/guides/pages/add_jenkins_credentials.adoc
+++ b/how-to/modules/guides/pages/add_jenkins_credentials.adoc
@@ -1,5 +1,4 @@
-
-== Add Credentials to Jenkins
+= Add Credentials to Jenkins
 
 In Jenkins, credentials are used to allow the Jenkins instance to
 interact with 3rd party applications and websites.
