--- a/learning-labs/modules/ROOT/pages/index.adoc
+++ b/learning-labs/modules/ROOT/pages/index.adoc
@@ -1,6 +1,4 @@
-[[Overview]]
-
-== Overview
+= Overview
 
 The best way to learn a technology is to use it. These Learning Labs have been designed to give you hands-on experience with Booz Allen's Solutions Delivery Platform.
 
