--- a/learning-labs/modules/jte-primitives/pages/4-application-environments.adoc
+++ b/learning-labs/modules/jte-primitives/pages/4-application-environments.adoc
@@ -1,6 +1,6 @@
-== Application Environments
+= Application Environments
 
-=== What is an Application Environment?
+== What is an Application Environment?
 
 Performing an automated deployment is a ubiquitious step in continuous
 delivery pipelines.
@@ -21,7 +21,8 @@ steps are one of the few exceptions to this rule.
 https://jenkinsci.github.io/templating-engine-plugin/pages/Primitives/application_environments.html[View
 the Application Environment documentation]
 ====
-==== A Word on Input Parameters to Library Steps
+
+=== A Word on Input Parameters to Library Steps
 
 Understanding _why_, in general, library steps should not accept input
 parameters is fundamental to understanding the goals of the Jenkins
@@ -57,9 +58,9 @@ https://jenkinsci.github.io/templating-engine-plugin/pages/Library_Development/e
 Deployment steps are different. It is safe to assume that every step
 that performs a deployment needs to know some environment context.
 
-=== Define and Use an Application Environment
+== Define and Use an Application Environment
 
-==== Create a Deployment Library
+=== Create a Deployment Library
 
 Let's actually create a mock deployment library to demonstrate the
 utility of Application Environments.
@@ -114,7 +115,8 @@ The file structure within your `libraries` directory should now be:
         └── static_code_analysis.groovy
 ----
 ====
-==== Define the Application Environments in the Pipeline Configuration
+
+=== Define the Application Environments in the Pipeline Configuration
 
 We now need to load the `ansible` library and define the Application
 Environments.
@@ -161,7 +163,8 @@ The only two keys that Application Environments explicitly define are
 the Application Environment in the Pipeline Configuration, but can be
 overridden.
 ====
-==== Update the Pipeline Template
+
+=== Update the Pipeline Template
 
 Now that we have a library that performs a deployment step and
 Application Environments defined in the Pipeline Configuration, let's
@@ -181,7 +184,8 @@ deploy_to prod
 These variables `dev` and `prod` come directly from the Applications
 Environments we just defined in the Pipeline Configuration.
 ====
-==== Run the Pipeline
+
+=== Run the Pipeline
 
 From the Pipeline job's main page, click `Build Now` in the lefthand
 navigation menu.
