--- a/learning-labs/modules/local-development/pages/2-run-jenkins.adoc
+++ b/learning-labs/modules/local-development/pages/2-run-jenkins.adoc
@@ -1,5 +1,5 @@
 
-== Run the Jenkins Container
+= Run the Jenkins Container
 
 Docker makes it really easy to package applications along with all their dependencies. 
 
