--- a/deployment-guides/modules/openshift/pages/2_0_Pipeline_Config_Overview.adoc
+++ b/deployment-guides/modules/openshift/pages/2_0_Pipeline_Config_Overview.adoc
@@ -1,14 +1,14 @@
-== Section 2 - Setting Up a Pipeline
+= Section 2 - Setting Up a Pipeline
 
-=== Section 2 Overview
+== Section 2 Overview
 
 Once you have completed this section, you should have a Pipeline
 Configuration repository that defines a DevSecOps pipeline for your
 project or your business organization.
 
-=== Before You Begin
+== Before You Begin
 
-==== You Should Have...
+=== You Should Have...
 
 * Some idea of what you want from your automated pipeline
 * A general understanding of the software that will be built, tested,
@@ -16,7 +16,7 @@ and deployed with your pipeline
 * Designed the components of your application to run in (Docker)
 containers
 
-==== You Should Be Able To...
+=== You Should Be Able To...
 
 * Modify simple configuration files
 * link:https://help.github.com/articles/create-a-repo/[Create a GitHub Repository] (or the equivalent in your SCM of choice)
