--- a/deployment-guides/modules/openshift/pages/2_1_Pipeline_Planning.adoc
+++ b/deployment-guides/modules/openshift/pages/2_1_Pipeline_Planning.adoc
@@ -1,6 +1,6 @@
-== Section 2.1 - Pipeline Planning
+= Section 2.1 - Pipeline Planning
 
-=== Identify Your Source Code
+== Identify Your Source Code
 
 Where are you, or your team's developers, storing their code? Ideally,
 there's some source code management tool (SCM) that's being used to
@@ -12,7 +12,7 @@ maintains its source code. Other Git-based SCMS like GitLab are also
 viable, as are other SCMs like Mercurial, though the SDP libraries to
 support them have not yet been created.
 
-=== Understand Your Pipeline
+== Understand Your Pipeline
 
 A basic DevSecOps, CI/CD Pipeline will do three things: build, deploy,
 and test. It should take the raw source code and change it to a format
@@ -25,7 +25,7 @@ There are myriad ways to do any of these three tasks, but because it's
 assumed you'll be deploying on OpenShift we can make some assumptions
 about your pipeline.
 
-==== Building
+=== Building
 
 Since OpenShift is a container application platform, and it's assumed
 that your application is being deployed to OpenShift, it can also be
@@ -38,14 +38,14 @@ them in OpenShift's built-in container registry.
 OpenShift has some link:https://docs.openshift.com/container-platform/3.9/creating_images/guidelines.html[guidelines around creating container images] that it's important to be aware of. The section on
 supporting arbitrary user IDs is especially important.
 
-==== Testing
+=== Testing
 
 The SDP currently has libraries for tools that run link:/sdp-docs/pages/libraries/sonarqube/README.html[code quality tests], link:/sdp-docs/pages/libraries/a11y/README.html[accessibility compliance (508) tests], link:/sdp-docs/pages/libraries/owasp_zap/README.html[penetration tests], and more. Which
 ones you should use depends on the needs of your application. Automated
 tests like these are useful for detecting issues earlier in a feature's
 lifecycle, where it's easier (and cheaper) to correct.
 
-==== Deploying
+=== Deploying
 
 The link:/sdp-docs/pages/libraries/openshift/README.html[OpenShift Library] makes it easy to deploy to different OpenShift projects using link:https://helm.sh/[Helm], a
 Kubernetes/OpenShift package manager and templating tool. How to deploy
