--- a/deployment-guides/modules/openshift/pages/2_2_Pipeline_Config.adoc
+++ b/deployment-guides/modules/openshift/pages/2_2_Pipeline_Config.adoc
@@ -1,4 +1,4 @@
-== Section 2.2 - Creating the Pipeline Configuration Repository
+= Section 2.2 - Creating the Pipeline Configuration Repository
 
 There are as many ways to create a set up a Pipeline Configuration
 Repository as there are ways to create software. This guide should
@@ -8,13 +8,13 @@ This page covers the creation of a simple pipeline configuration
 repository, a repository containing files that define one or more
 pipelines, with a single governance tier in the root. link:/sdp-docs/pages/jte/docs/pages/Governance/index.html[You can learn more about pipeline goverance here].
 
-=== Create a Repository
+== Create a Repository
 
 Use an SCM like GitHub to link:https://help.github.com/articles/create-a-repo/[create a repository] to store your pipeline configuration. This way
 you can access, share, and maintain pipeline configuration like any
 other piece of code.
 
-=== Create a Pipeline Template
+== Create a Pipeline Template
 
 At the root of this repository create a file called `Jenkinsfile`. This
 is the default pipeline template. A simple pipeline template might look
@@ -37,7 +37,7 @@ on_merge to: master, {
 [NOTE]
 link:/sdp-docs/pages/jte/docs/pages/Templating/index.html[You can learn more about writing pipeline templates here]
 
-=== Create pipeline_config.groovy
+== Create pipeline_config.groovy
 
 Also at the root of your pipeline configuration repository, create a
 file called `pipeline_config.groovy`. Since this file will (likely) be
@@ -98,12 +98,12 @@ The pipeline defined by this example won't work until you've finished
 setting up your application environments in OpenShift and written your
 helm configuration repository, which is covered in the next section.
 
-=== About The Example Pipeline Configuration
+== About The Example Pipeline Configuration
 
 This section explains how the example pipeline template and pipeline
 config file above work together to create a pipeline.
 
-==== The Pipeline Template
+=== The Pipeline Template
 
 Starting with the pipeline template, every pipeline created from _this_
 template will have these steps:
@@ -128,7 +128,7 @@ provide the implementation for the pipeline steps, link:/sdp-docs/pages/jte/docs
 prod environments being deployed to, and link:/sdp-docs/pages/jte/docs/pages/Templating/primitives/keywords.html[keywords] for the variables `develop` and
 `master` being used.
 
-==== The Libraries
+=== The Libraries
 
 [source,groovy]
 ----
@@ -190,7 +190,7 @@ OpenShift libraries depend on a step it defines.
 
 link:/sdp-docs/pages/libraries/index.html[You can learn more about the SDP pipeline libraries here]
 
-==== The Application Environments
+=== The Application Environments
 
 [source,groovy]
 ----
@@ -214,7 +214,7 @@ primitive object that we define here and uses its values in link:https://github.
 project and which values.yaml file to use as part of the deployment.
 View the next section or the link:/sdp-docs/pages/libraries/openshift/README.html[OpenShift library] page for more details.
 
-==== The Keywords
+=== The Keywords
 
 [source,groovy]
 ----
@@ -229,7 +229,7 @@ steps `on_merge()`, `on_commit`, and `on_pull_request` take a regex
 expression as a parameter. These regex expressions have been stored as
 keywords to make the pipeline template more human-readable.
 
-=== Closing Summary
+== Closing Summary
 
 This pipeline configuration repository, with a single governance tier
 located in the base of the repository, contains two files: _Jenkinsfile_
@@ -247,7 +247,7 @@ Using the files in this example, pipelines will:
 . build & push a Docker container image
 . depending on the pipeline trigger, deploy that container on OpenShift
 
-=== Next Steps
+== Next Steps
 
 You should be ready to move onto the next section, which covers creating
 a Helm chart repository. For more on the information covered in this
