--- a/deployment-guides/modules/openshift/pages/3_1_Application_Environments.adoc
+++ b/deployment-guides/modules/openshift/pages/3_1_Application_Environments.adoc
@@ -1,6 +1,6 @@
-== Section 3.1 - Creating the Application Environments
+= Section 3.1 - Creating the Application Environments
 
-=== Overview
+== Overview
 
 In order to use the link:/sdp-docs/pages/libraries/openshift/README.html[OpenShift library]'s link:https://github.com/boozallen/sdp-libraries/blob/master/openshift/deploy_to.groovy[deploy step], there needs to be set of pre-configured
 projects in OpenShift:
@@ -13,7 +13,7 @@ application environments
 
 You can create all of these using the link:https://github.com/boozallen/sdp-helm-chart/blob/master/resources/helm/provision_app_envs.sh[provision_app_envs script].
 
-=== Prerequisites
+== Prerequisites
 
 In addition to the prerequisites covered in the link:/sdp-docs/pages/deployment-guides/openshift/3_0_Application_Environment_Overview.html[section overview], make sure
 
@@ -23,7 +23,7 @@ user with the link:https://docs.openshift.com/container-platform/3.11/architectu
 . None of the projects that the provision app envs script will create
 already exist (not likely if this is your first run)
 
-=== Getting provision_app_envs.sh
+== Getting provision_app_envs.sh
 
 Clone the https://github.com/boozallen/sdp-helm-chart[sdp-helm-chart repository] if you haven't already, and use your terminal to navigate to
 the `resources/helm` folder. You should see a file called
@@ -62,7 +62,7 @@ where:
  2) rhs-tiller can deploy resources to rhs-{dev,test,staging}
 ----
 
-=== The Options You Need to Decide On
+== The Options You Need to Decide On
 
 You need a prefix for the application environment names. It's an
 arbitrary name that makes it possible to distinguish your application
@@ -87,7 +87,7 @@ This is the _full name of the project_ and will not necessarily include
 the prefix (unlike the other projects being created). In the example
 above, that project is called "red-hat-summit".
 
-=== Running The Script
+== Running The Script
 
 Putting it all together, execute the provision_app_envs script, using
 the appropriate flags to provide the three pieces of information covered
@@ -119,7 +119,7 @@ $ bash provision_app_envs.sh -p demo -e dev -e prod -i demo
 |demo |The project where we will configure SDP to push container images
 |===
 
-=== Adding The Tiller Credential To Jenkins
+== Adding The Tiller Credential To Jenkins
 
 The tiller server just created cannot be used without credentials, so
 those credentials need to be added to Jenkins. Assuming your tiller
