--- a/deployment-guides/modules/openshift/pages/3_2_Helm_Chart_Repo.adoc
+++ b/deployment-guides/modules/openshift/pages/3_2_Helm_Chart_Repo.adoc
@@ -1,6 +1,6 @@
-== Section 3.2 - Setting up the Helm Chart Repository
+= Section 3.2 - Setting up the Helm Chart Repository
 
-=== Overview
+== Overview
 
 To achieve disaster recovery, auditability, rollbacks, and
 infrastructure as code, the OpenShift library deploys applications using
@@ -17,7 +17,7 @@ application to OpenShift. In it, you should create a Helm chart that
 defines the various link:https://docs.openshift.com/container-platform/3.11/dev_guide/deployments/how_deployments_work.html[DeploymentConfigs], link:https://docs.openshift.com/container-platform/3.11/architecture/core_concepts/pods_and_services.html#services[Services], link:https://docs.openshift.com/container-platform/3.11/dev_guide/routes.html[Routes], and other objects your application needs to
 function.
 
-=== Create a Repository
+== Create a Repository
 
 Use an SCM like GitHub to create a repository to store your Helm chart.
 This way you can access, share and maintain the Helm chart like any
@@ -26,7 +26,7 @@ helm-configuration-repository makes sense. It can be public or private,
 so long as the GitHub account Jenkins is using can read from it and
 write back to it.
 
-=== Initialize The Helm Repository
+== Initialize The Helm Repository
 
 Assuming you've created an empty GitHub repository for your helm chart,
 you can run:
@@ -53,7 +53,7 @@ We want to keep those files, but provide our own content.
 
 For more information on Helm charts, check out the link:[Helm documentation].
 
-=== SDP Helm Conventions
+== SDP Helm Conventions
 
 SDP pushes and pulls to this chart repository to keep it up to date with
 the image tags of deployed containers.
@@ -85,7 +85,7 @@ image: docker-registry.default.svc:5000/demo/sample-app:{{ .Values.image_shas.sa
 At this point, you should take some time to finish fleshing out your
 Helm chart to reflect how you wish to deploy your app.
 
-=== Information on Writing Templates
+== Information on Writing Templates
 
 The Helm documentation on writing link:https://docs.helm.sh/developing_charts/[charts] and link:https://docs.helm.sh/chart_template_guide/[templates] is a good place to start learning
 how to create your helm chart. There are a few additional tips that are
@@ -137,7 +137,7 @@ the Route exposes that service so it can be connected to from outside
 the cluster. You can see example templates for each of these in the link:https://github.com/boozallen/sdp-helm-chart"[sdp-helm-chart]
 repository, which is itself a Helm chart.
 
-=== Add The Values Files
+== Add The Values Files
 
 In addition to the _values.yaml_ file created when `helm create` was
 run, you need a _values.<APP_ENV>.yaml_ file for each application
@@ -159,7 +159,7 @@ The SDP will automatically update the image sha value discussed earlier,
 but you should now modify the different values files with their
 environment-specifc variables.
 
-=== Updating the Pipeline Configuration
+== Updating the Pipeline Configuration
 
 If you recall from earlier in this guide, in the page on the link:/sdp-docs/pages/deployment-guides/openshift/2_2_Pipeline_Config.html[Pipeline Configuration Repository], there
 were some settings for the link:/sdp-docs/pages/libraries/openshift/README.html[OpenShift SDP library] that may not have been clear before this
@@ -206,7 +206,7 @@ Also, if you haven't already, update the application environments in
 your pipeline config file to reflect the application environments you
 have just deployed.
 
-=== Closing Summary
+== Closing Summary
 
 In order to enable automatic deployments to OpenShift, this guide
 covered the following:
@@ -218,7 +218,7 @@ application
 . Modifying Jenkins and the pipeline config file to use the helm chart
 repository and the provisioned application environments
 
-=== Next Steps
+== Next Steps
 
 * link:/sdp-docs/pages/how-to/helm-multitenancy.html[More on Helm multitenancy in OpenShift]
 * link:/sdp-docs/pages/libraries/openshift/README.html[More on the OpenShift SDP library]
