--- a/learning-labs/modules/jte-primitives/pages/1-prerequisites.adoc
+++ b/learning-labs/modules/jte-primitives/pages/1-prerequisites.adoc
@@ -1,13 +1,13 @@
-== Prerequisites
+= Prerequisites
 
-=== Jenkins Instance
+== Jenkins Instance
 
 A Jenkins instance will be required for this lab. If you don't have one
 available to you, we would recommend going through the
 `Local Development<Local Development>` learning lab to deploy a local
 Jenkins instance through Docker.
 
-=== JTE: The Basics
+== JTE: The Basics
 
 This lab continues to build upon our knowledge of the Jenkins Templating
 Engine so first completing the `JTE: The Basics <JTE The Basics>` lab
@@ -17,7 +17,7 @@ This lab will assume we're using the same pipeline configuration
 repository used during The Basics lab and that it is already configured
 as a Library Source in the Global Governance Tier.
 
-==== Remove the Global Governance Tier's Pipeline Configuration
+=== Remove the Global Governance Tier's Pipeline Configuration
 
 For the purposes of this lab, we will only be using the Pipeline Job
 type. In JTE: The Basics, we created added a Pipeline Configuration to
