--- a/learning-labs/modules/jte-primitives/pages/5-keywords.adoc
+++ b/learning-labs/modules/jte-primitives/pages/5-keywords.adoc
@@ -1,6 +1,6 @@
-== Keywords
+= Keywords
 
-=== What is a Keyword?
+== What is a Keyword?
 
 Keywords allow you to define variables in the Pipeline Configuration
 that can be referenced in your Pipeline Template. This allows you to
@@ -22,9 +22,10 @@ required before the deployment to Production.
 https://jenkinsci.github.io/templating-engine-plugin/pages/Primitives/keywords.html[View
 the Keyword documentation]
 ====
-=== Define and Use A Keyword
 
-==== Define the Keyword in the Pipeline Configuration
+== Define and Use A Keyword
+
+=== Define the Keyword in the Pipeline Configuration
 
 Update the *Pipeline Configuration* to:
 
@@ -66,7 +67,8 @@ Configuration.
 Traditional variable setting syntax of `a = b` is used to define
 Keywords.
 ====
-==== Update the Pipeline Template
+
+=== Update the Pipeline Template
 
 With the `continuous_integration` stage defined, we can update the
 pipeline template to make use of it.
@@ -97,7 +99,8 @@ We would recommend that, in practice, the deployment library inherits
 this manual gate approval so that `requiresApproval` could be set on
 each Application Environment individually.
 ====
-==== Run the Pipeline
+
+=== Run the Pipeline
 
 From the Pipeline job's main page, click `Build Now` in the lefthand
 navigation menu.
@@ -186,6 +189,7 @@ In this case, the log output was:
 `[JTE] [Stage - continuous_integration]` indicating a Stage called
 `continuous_integration` is about to be executed.
 ====
+
 [NOTE]
 ====
 The exercise of setting `requiresApproval = false` and seeing the
