--- a/learning-labs/modules/jte-primitives/pages/index.adoc
+++ b/learning-labs/modules/jte-primitives/pages/index.adoc
@@ -1,9 +1,9 @@
-== JTE: Pipeline Primitives
+= JTE: Pipeline Primitives
 
 In this lab, we're going to walk through each of the JTE pipeline
 primitives and describe their usage.
 
-=== What Are Primitives
+== What Are Primitives
 
 When writing reusable pipeline templates through the Jenkins Templating
 Engine, one of the primary goals is to keep the template as easy to read
@@ -22,7 +22,8 @@ easier.
 Pipeline Primitives are defined in the aggregated pipeline configuration
 and make writing & reading pipeline templates easier.
 ====
-=== What You'll Learn
+
+== What You'll Learn
 
 * The Application Environment primitive
 * The Stage primitive
