--- a/learning-labs/modules/jte-the-basics/pages/index.adoc
+++ b/learning-labs/modules/jte-the-basics/pages/index.adoc
@@ -1,4 +1,4 @@
-== JTE: The Basics
+= JTE: The Basics
 
 The purpose of this lab is to introduce you to the Jenkins Templating
 Engine as a *framework* for building Jenkins pipelines in a way that
@@ -18,7 +18,8 @@ _multiple_ repositories at the same time.
 The modularity that JTE promotes allows you to do this across teams
 _regardless_ of the specific tools that each application may be using.
 ====
-=== What You'll Learn
+
+== What You'll Learn
 
 * Configure your first tool-agnostic pipeline template
 * Create your first set of pipeline libraries to provide tool-specific
